01_K8S/ch2/factorial-cache-app/factorial-cache-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-factorial-cache-app
  namespace: factorial
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: factorial-cache-app
  template:
    metadata:
      labels:
        app: factorial-cache-app
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: factorial-cache-app
          image: wnsgud0310/factorial-cache-app:0.0.6
          lifecycle: # Corrected lifecycle section indentation
            preStop:
              exec:
                command: [ "/bin/sh", "-c", "sleep 10" ]
          startupProbe: # Corrected probes indentation
            httpGet:
              path: /probe/healthcheck
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /probe/healthcheck
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 1
            successThreshold: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /probe/healthcheck
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 1
            failureThreshold: 3
